# QA_guru

./: .env  .gitignore  Dockerfile  docker-compose.yml  http_client.py  main.py  poetry.toml  pyproject.toml  readme.md  regisrer_api.py  requirements.txt  test_reqres.py  test_user.py  test_users.py  users.json
.github/workflows/: release.txt  release.yml  test.yml
.guthub/workflows/: test.yml
app/: main.py
app/base/: base.py
app/database/: engine.py  users.py
app/models/: User.py
app/routers/: status.py  users.py
tests/: 1test_smoke.py  conftest.py  test_api.py  test_pagination.py  test_smoke.py
tests/utils/: base_session.py  config.py
